--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -7,7 +7,7 @@
 
 body {
   width: 100%;
-  height: 100vh;
+  height: calc(100vh - 90px);
   background: linear-gradient(270deg, #0d2450, #1e263d 100%);
   color: #0d2450;
 }
