--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -33,3 +33,5 @@ body {
   border-radius: 5px ;
   border: 3px solid  #0d2450;
 }
+
+$box-shadow: -1px -1px 5px 0 #ffffff, 1px 1px 5px 0 rgba(28, 38, 63, 0.5);
