--- a/src/styles/components/_AuthScreen.scss
+++ b/src/styles/components/_AuthScreen.scss
@@ -1,1 +1,79 @@
-//Aqui login y register
+.auth__container {
+  background-color: white;
+  border-radius: 40px;
+  display: flex;
+  height: auto;
+  width: 880px;
+
+  .auth__container--left {
+    width: 50%;
+  }
+  .auth__container--right {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+
+    form {
+      display: flex;
+      flex-direction: column;
+      padding: 36px;
+      label {
+        font-weight: 600;
+        font-size: 1.2rem;
+        margin-bottom: 10px;
+        padding-top: 16px;
+        padding-left: 16px;
+      }
+      .auth__input {
+        background-color: #F8FAFF;
+        border: none;
+        border-radius: 20px;
+        box-shadow: inset 0px 4px 5px 0 rgba(0, 0, 0, 0.2);
+        outline: none;
+        padding: 12px 18px;
+      }
+      .auth__btn {
+      background-color: #0D2450;
+      border: none;
+      border-radius: 50px;
+      color: white;
+      cursor: pointer;
+      font-weight: 600;
+      margin: 25px 0;
+      outline: none;
+      padding: 12px 24px;
+      transition: .5s;
+      width: 100%;
+        &:hover {
+          background-color: darken($color: #0D2450, $amount: 5);
+        }
+      }
+      p {
+        text-align: center;
+        a {
+          color: #0D2450;
+          font-weight: bold;
+          text-decoration: none;
+        }
+      }
+    }
+  }
+
+  .auth__title {
+    margin-top: 36px;
+    text-align: center;
+  }
+}
+
+.auth-logo__container {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: center;
+
+  p {
+    text-align: center;
+    width: 70%;
+  }
+}
