[ADD]Redux structure added

--- a/src/styles/components/_ProfileScreen.scss
+++ b/src/styles/components/_ProfileScreen.scss
@@ -23,7 +23,8 @@
 
   .card-profile__range {
     padding-top: 25px;
-    width: 192px;
+    width: 80%;
+    margin: 0 auto;
   }
 
   .card-profile__title {
