--- a/src/styles/components/_CardComponent.scss
+++ b/src/styles/components/_CardComponent.scss
@@ -39,6 +39,7 @@ input[type="range"] {
     padding: 10px 15px;
     border:none;
     width: 80%;
+    margin-bottom: 23px;
 }
 
 input::placeholder {
@@ -52,9 +53,11 @@ input::placeholder {
   .card__send-button {
       position: absolute;
       right: 27px;
-      top: 20px;
+      top: 21px;
       border-radius: 50%;
       border:none;
       padding: 4px;
+      background-color: white;
+      box-shadow: -2px -2px 2px rgba(255, 255, 255, 0.25), 2px 2px 2px rgba(194, 194, 194, 0.25);
   }
 
