--- a/src/styles/components/_CardComponent.scss
+++ b/src/styles/components/_CardComponent.scss
@@ -12,7 +12,7 @@
     padding: 7px 32px 15px 22px;
 }
 
-input[type="range"] { 
+.card__range { 
     margin: auto;
     -webkit-appearance: none;
     position: relative;
