[UPDATE]Posts on home working

--- a/src/styles/components/_MenuComponent.scss
+++ b/src/styles/components/_MenuComponent.scss
@@ -12,6 +12,7 @@
   padding-top: 10px;
   right: calc(50% - 250px);
   width: 100%;
+  z-index: 1000;
 
   .menu__plus-post {
     align-items: center;
