--- a/src/styles/components/_HomeScreen.scss
+++ b/src/styles/components/_HomeScreen.scss
@@ -1,9 +1,12 @@
-.home__posts--container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+.cont {
   height: 79vh;
+  overflow-y: scroll;
   overflow-x: hidden;
-  overflow-y: auto;
-  margin: 0 auto;
+  padding-bottom: 80px;
+}
+
+.home__posts--container {
+  columns: 3 200px;
+  column-gap: 1rem;
+  
 }
