--- a/src/styles/components/_CardComponent.scss
+++ b/src/styles/components/_CardComponent.scss
@@ -1,71 +1,81 @@
-.card__container {
-	border-radius: 20px;
-	width: 100%;
-	max-width: 245px;
-	height: auto;
-	overflow: hidden;
-	box-shadow: -4px -4px 4px #F9FAFF, 4px 4px 10px #E9EDF7;
-	margin: 0 25px 25px 0;
-	break-inside: avoid;
-	page-break-inside: avoid;
+.card__link {
+	text-decoration: none;
+	color: #1C263F;
+	margin: 10px;
 
-	img {
+	.card__container {
+		border-radius: 20px;
 		width: 100%;
+		min-width: 245px;
+		height: auto;
+		overflow: hidden;
+		box-shadow: -4px -4px 4px #F9FAFF, 4px 4px 10px #E9EDF7;
+		break-inside: avoid;
+		page-break-inside: avoid;
+		background-color: white;
+
+		img {
+			width: 100%;
+		}
 	}
-}
 
-.card__description {
-	font-size: 16px;
-	font-weight: 700;
-	padding: 7px 32px 15px 22px;
-}
+	.card__description {
+		font-size: 16px;
+		font-weight: 700;
+		padding: 7px 32px 15px 22px;
+	}
 
-.card__range {
-	margin: auto;
-	-webkit-appearance: none;
-	position: relative;
-	overflow: hidden;
-	height: 11px;
-	width: calc(100% - 48px);
-	cursor: pointer;
-	margin: 0 27px 0 22px;
-	border-radius:  11px 11px 0 0;
-	background: linear-gradient(0deg, #B4CBB9, #B4CBB9), #C4C4C4;
-	transform: rotate(180deg);
-}
+	.card__range {
+		margin: auto;
+		-webkit-appearance: none;
+		position: relative;
+		overflow: hidden;
+		height: 11px;
+		width: calc(100% - 48px);
+		cursor: pointer;
+		margin: 0 27px 0 22px;
+		border-radius:  11px 11px 0 0;
+		background: linear-gradient(0deg, #B4CBB9, #B4CBB9), #C4C4C4;
+		transform: rotate(180deg);
+	}
 
-.card__input-text {
-	padding: 23px;
-	width: 100%;
-	position: relative;
-}
+	.card__input-text {
+		padding: 23px;
+		width: 100%;
+		position: relative;
+	}
 
-.card__input-text-text {
-	background: #F8FAFF;
-	box-shadow: inset 2px 2px 4px #E0E3EA;
-	border-radius: 15px;
-	padding: 10px 15px;
-	border:none;
-	width: 80%;
-	margin-bottom: 23px;
-}
+	.card__input-text-text {
+		background: #F8FAFF;
+		box-shadow: inset 2px 2px 4px #E0E3EA;
+		border-radius: 15px;
+		padding: 10px 15px;
+		border:none;
+		width: 80%;
+		margin-bottom: 23px;
+	}
 
-input::placeholder {
-	color: rgba(28, 38, 63, 0.5);
-	font-style: normal;
-	font-weight: bold;
-	font-size: 12px;
-	line-height: 14px;
-  }
+	input::placeholder {
+		color: rgba(28, 38, 63, 0.5);
+		font-style: normal;
+		font-weight: bold;
+		font-size: 12px;
+		line-height: 14px;
+		}
 
-  .card__send-button {
+	.card__send-button {
 		position: absolute;
-		right: 27px;
-		top: 21px;
 		border-radius: 50%;
 		border:none;
+		width: 24px;
+		height: 24px;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		top: 20px;
+		right: 28px;
 		padding: 4px;
 		background-color: white;
 		box-shadow: -2px -2px 2px rgba(255, 255, 255, 0.25), 2px 2px 2px rgba(194, 194, 194, 0.25);
-  }
-
+	}
+}
