--- a/src/styles/components/_HomeScreen.scss
+++ b/src/styles/components/_HomeScreen.scss
@@ -6,7 +6,29 @@
 }
 
 .home__posts--container {
-  columns: 3 200px;
-  column-gap: 1rem;
-  
+
+  @media (min-width: 450px){
+    column-count: 1 ;
+    column-gap: 1rem;
+  }
+  @media (min-width: 650px){
+    column-count: 2 ;
+    column-gap: 1rem;
+  }
+  @media (min-width: 1000px){
+    column-count: 3 ;
+    column-gap: 1rem;
+  }
+  @media (min-width: 1200px){
+    column-count: 4 ;
+    column-gap: 1rem;
+  }
+  @media (min-width: 1500px){
+    column-count: 5 ;
+    column-gap: 1rem;
+  }
+  @media (min-width: 1800px){
+    column-count: 6 ;
+    column-gap: 1rem;
+  }
 }
