[UPDATE]New post working

--- a/src/styles/components/_CardComponent.scss
+++ b/src/styles/components/_CardComponent.scss
@@ -1,7 +1,7 @@
 .card__link {
 	text-decoration: none;
 	color: #1C263F;
-	margin: 10px;
+	margin: 0px 10px 10px 10px;
 
 	.card__container {
 		border-radius: 20px;
