--- a/src/styles/components/_DetailScreen.scss
+++ b/src/styles/components/_DetailScreen.scss
@@ -1,15 +1,23 @@
 .detail-screen__container {
-    display: flex;
-    max-width: 880px;
-    height: 444px;
-    box-shadow: -4px -4px 4px #F9FAFF, 4px 4px 10px #E9EDF7;
-    border-radius: 40px;
-    overflow: hidden;
-    margin-bottom: 59px;
-    background-color: white;
+	display: flex;
+	width: 100%;
+	max-width: 800px;
+	margin: 0 auto;
+	height: auto;
+	box-shadow: -4px -4px 4px #F9FAFF, 4px 4px 10px #E9EDF7;
+	border-radius: 40px;
+	overflow: hidden;
+	margin-bottom: 59px;
+	background-color: white;
+
+	.img {
+		width: 100%;
+		max-width: 400px;
+		min-width: 300px;
+	}
 }
 
-.detail-screen__range { 
+.detail-screen__range {
     margin: auto;
     -webkit-appearance: none;
     position: relative;
@@ -18,7 +26,7 @@
     width: 100%;
     max-width: 340px;
     height: 15px;
-    cursor: pointer;   
+    cursor: pointer;
     margin: 34px 55px 0 55px;
     border-radius:  7px 7px ;
     background: linear-gradient(0deg, #B4CBB9, #B4CBB9), #C4C4C4;
@@ -28,7 +36,14 @@
 .detail-screen__user-name {
     font-size: 16px;
     font-weight: bold;
-    margin-bottom: 10px;
+		margin-bottom: 10px;
+		padding-left: 10px;
+		text-transform: capitalize;
+}
+
+.detail-screen__user-title {
+	padding-left: 10px;
+	text-transform: capitalize;
 }
 
 .detail-screen__photo-description {
@@ -43,6 +58,13 @@
     align-items: center;
 }
 
+.detail-screen__comments {
+	width: 100%;
+	height: auto;
+	overflow-y: scroll;
+	margin-bottom: 20px;
+}
+
 .detail-screen__opinion {
     display: flex;
     padding: 25px;
@@ -55,16 +77,16 @@
 }
 
 .detail-screen__opinion-container {
-    height: 180px;
-    margin-bottom: 37px;
+    height: auto;
+    margin-bottom: 15px;
 }
 
 
 .detail-screen__input-text {
     padding: 23px;
     width: 100%;
-    position: relative;
-    margin-left: 25px;
+		position: relative;
+		margin-top: auto;
 }
 
 .detail-screen__input-text-text {
@@ -79,30 +101,38 @@
 
 .detail-screen__send-button {
     position: absolute;
-    right: 27px;
-    top: 21px;
-    border-radius: 50%;
-    border:none;
+		border-radius: 50%;
+		top: 30%;
+		right: 30px;
+		width: 28px;
+		height: 28px;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+    border: none;
     padding: 4px;
     background-color: white;
     box-shadow: -2px -2px 2px rgba(255, 255, 255, 0.25), 2px 2px 2px rgba(194, 194, 194, 0.25);
 }
 
 .detail-screen__goback-button {
-    width: 338px;
-height: 40px;
-background: #0D2450;
-box-shadow: 2px 2px 4px #E0E3EA;
-border-radius: 20px;
-color: white;
+	width: 338px;
+	height: 40px;
+	background: #0D2450;
+	box-shadow: 2px 2px 4px #E0E3EA;
+	border-radius: 20px;
+	border: none;
+	color: white;
+	cursor: pointer;
 }
 
 .detail-screen__goback-button-container {
-    max-width: 880px;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+	max-width: 880px;
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin: 0 auto 550px;
 }
 
 
